terraform/modules/security_group/main.tf
resource "aws_security_group" "app_sg" {
  name        = "app_sg"
  description = "Security group for Flask app EC2 instance"
  vpc_id      = var.vpc_id

  tags = {
    Name = "${var.name}-app-sg"
  }
}

resource "aws_vpc_security_group_ingress_rule" "allow_ssh" {
  description       = "SSH from my IP"
  security_group_id = aws_security_group.app_sg.id
  cidr_ipv4         = var.my_ip_cidr
  from_port         = 22
  ip_protocol       = "tcp"
  to_port           = 22
}

resource "aws_vpc_security_group_ingress_rule" "allow_http" {
  description       = "HTTP from anywhere"
  security_group_id = aws_security_group.app_sg.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 80
  ip_protocol       = "tcp"
  to_port           = 80
}

resource "aws_vpc_security_group_ingress_rule" "allow_https" {
  description       = "HTTPS from anywhere"
  security_group_id = aws_security_group.app_sg.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 443
  ip_protocol       = "tcp"
  to_port           = 443
}

resource "aws_vpc_security_group_ingress_rule" "allow_5000" {
  description       = "Flask app port from anywhere"
  security_group_id = aws_security_group.app_sg.id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 5000
  ip_protocol       = "tcp"
  to_port           = 5000
}

resource "aws_vpc_security_group_egress_rule" "allow_all_traffic_ipv4" {
  security_group_id = aws_security_group.app_sg.id
  cidr_ipv4         = "0.0.0.0/0"
  ip_protocol       = "-1"
}
